Fixing the size of the gosai logo on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -596,7 +596,8 @@
 
 	.digital-natives img,
 	.good-hombres img,
-	.locksmith img {
+	.locksmith img,
+	.gosailaw img {
 		max-width: 50px;
 		max-height: 50px;
 	}
